--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,10 @@ steps:
   displayName: 'Execute Packer script for RHEL'
   env:
     AZURE_CLOUD: $(AZURE_CLOUD)
-    AZURE_SECRET: $(SP_PASSWORD)
-    AZURE_CLIENTID: $(SP_CLIENTID)
-    AZURE_SUBSCRIPTIONID: $(SP_SUBSCRIPTIONID)
-    AZURE_TENANTID: $(SP_TENANTID)
+    AZURE_SECRET: $(SP-PASSWORD)
+    AZURE_CLIENTID: $(SP-CLIENTID)
+    AZURE_SUBSCRIPTIONID: $(SP-SUBSCRIPTIONID)
+    AZURE_TENANTID: $(SP-TENANTID)
     AZURE_LOCATION: $(AZURE_LOCATION)
     AZURE_RESOURCE_GROUP: $(AZURE_RESOURCE_GROUP)
     IMAGE_VERSION: $(runtime_vars.GIT_COMMIT)-$(runtime_vars.DATE)
