Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,8 @@ steps:
   displayName: 'Set runtime variables for pipeline'
 
 - script: |
-    ifconfig
+    IP=$(curl http://ipinfo.io/json | jq '.ip')
+    echo $IP
 
 - script: |
     # packer build rhel.json
