--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,14 +13,12 @@ steps:
     HOUR=$( date "+%H" )
     MINUTE=$( date "+%M" )
     SECONDS=$(echo "$HOUR*60+$MINUTE"|bc)
+    IP=$(curl http://ipinfo.io/json | jq -r '.ip')
     echo "##vso[task.setvariable variable=GIT_COMMIT;isOutput=true]$GIT_COMMIT"
     echo "##vso[task.setvariable variable=DATE;isOutput=true]${DATE}-${SECONDS}"
+    echo "##vso[task.setvariable variable=IP;isOutput=true]${IP}"
   name: runtime_vars
   displayName: 'Set runtime variables for pipeline'
-
-- script: |
-    IP=$(curl http://ipinfo.io/json | jq '.ip')
-    echo $IP
 
 - script: |
     # packer build rhel.json
@@ -35,3 +33,4 @@ steps:
     AZURE_LOCATION: $(AZURE_LOCATION)
     AZURE_RESOURCE_GROUP: $(AZURE_RESOURCE_GROUP)
     IMAGE_VERSION: $(runtime_vars.GIT_COMMIT)-$(runtime_vars.DATE)
+    WHITELIST_IP: $(runtime_vars.IP)
